[gd_scene load_steps=9 format=2]

[ext_resource path="res://Art/ButtonStyle.tres" type="StyleBox" id=1]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://Fonts/SpaceQuest-yOY3.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Art/ButtonStylePressed.tres" type="StyleBox" id=4]
[ext_resource path="res://Art/ButtonStyleHover.tres" type="StyleBox" id=5]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_color = Color( 0.0235294, 0.843137, 0.764706, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 3 )

[node name="PauseMenu" type="CanvasLayer"]

[node name="PauseScreen" type="Control" parent="."]
pause_mode = 2
visible = false
margin_right = 174.0
margin_bottom = 150.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PauseScreen"]
margin_left = 0.790894
margin_right = 1926.79
margin_bottom = 1088.0
color = Color( 1, 1, 1, 0.270588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="PauseScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 343.0
margin_top = 118.0
margin_right = 1389.0
margin_bottom = 800.0
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PauseScreen/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -131.511
margin_top = -314.992
margin_right = 129.489
margin_bottom = -223.992
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0235294, 0.843137, 0.764706, 1 )
text = "PAUSE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="PauseScreen/Panel"]
margin_left = 80.3839
margin_top = 168.5
margin_right = 458.384
margin_bottom = 281.5
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0235294, 0.843137, 0.764706, 1 )
custom_colors/font_color_hover = Color( 0.0235294, 0.843137, 0.764706, 1 )
custom_colors/font_color_pressed = Color( 0.0235294, 0.843137, 0.764706, 1 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit2Menu" type="Button" parent="PauseScreen/Panel"]
margin_left = 80.5189
margin_top = 333.054
margin_right = 458.519
margin_bottom = 446.054
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0235294, 0.843137, 0.764706, 1 )
custom_colors/font_color_hover = Color( 0.0235294, 0.843137, 0.764706, 1 )
custom_colors/font_color_pressed = Color( 0.0235294, 0.843137, 0.764706, 1 )
text = "Exit to Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="PauseScreen/Panel"]
margin_left = 83.3839
margin_top = 487.5
margin_right = 461.384
margin_bottom = 600.5
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0235294, 0.843137, 0.764706, 1 )
custom_colors/font_color_hover = Color( 0.0235294, 0.843137, 0.764706, 1 )
custom_colors/font_color_pressed = Color( 0.0235294, 0.843137, 0.764706, 1 )
text = "Quit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="HSlider" parent="PauseScreen/Panel"]
margin_left = 699.954
margin_top = 448.071
margin_right = 845.954
margin_bottom = 464.071
rect_scale = Vector2( 1.5, 2 )
custom_styles/slider = ExtResource( 1 )
max_value = 1.0
step = 0.05
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX" type="HSlider" parent="PauseScreen/Panel"]
margin_left = 700.0
margin_top = 308.0
margin_right = 846.0
margin_bottom = 324.0
rect_scale = Vector2( 1.5, 2 )
custom_styles/slider = ExtResource( 1 )
max_value = 1.0
step = 0.05
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicLabel" type="Label" parent="PauseScreen/Panel"]
margin_left = 515.019
margin_top = 432.572
margin_right = 658.019
margin_bottom = 487.572
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0235294, 0.843137, 0.764706, 1 )
text = "MUSIC"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXLabel" type="Label" parent="PauseScreen/Panel"]
margin_left = 516.956
margin_top = 282.464
margin_right = 613.956
margin_bottom = 337.464
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0235294, 0.843137, 0.764706, 1 )
text = "SFX"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PauseScreen/Panel/Resume" to="PauseScreen" method="_on_Resume_pressed"]
[connection signal="pressed" from="PauseScreen/Panel/Exit2Menu" to="PauseScreen" method="_on_Exit2Menu_pressed"]
[connection signal="pressed" from="PauseScreen/Panel/Quit" to="PauseScreen" method="_on_Quit_pressed"]
[connection signal="value_changed" from="PauseScreen/Panel/Music" to="PauseScreen" method="_on_Music_value_changed"]
[connection signal="value_changed" from="PauseScreen/Panel/SFX" to="PauseScreen" method="_on_SFX_value_changed"]
